@@ -20,6 +20,9 @@ New in v0.7.12 (2017/01/??)
   - B2 provider cannot handle two backups in the same bucket
 * Fixed bug #1603704 with patch supplied by Maciej Bliziński
   - Crash with UnicodeEncodeError
+* Some fixes to gpg.py to handle gpg1 & gpg2 & gpg2.1 commandline issues
+  - --gpg-agent is optional on gpg1, but on gpg2 it is used automatically
+  - --pinentry-mode is not a valid opt until gpg2.1, so condition on that
 
 
 New in v0.7.11 (2016/12/31)
